CHANGELOG RoundCube Webmail
---------------------------

2008/11/23 (alec)
----------
- Allow setting attachment col position in 'list_cols' option
- Allow override 'list_cols' via skin (#1485577)

2008/11/21 (alec)
----------
- Fix 'cache' table cleanup on session destroy (#1485516)
- Increase speed of session destroy and garbage clean up
- Fix session timeout when DB server got clock skew (#1485490)

2008/11/19 (alec)
----------
- Fix handling of some malformed messages (#1484438)
- Speed up raw message body handling
- Better HTML entities conversion in html2text (#1485519)

2008/11/15 (alec)
----------
- Fix big memory consumption and speed up searching on servers without SORT capability
- Fix setting locale to tr_TR, ku and az_AZ (#1485470) 

2008/11/12 (alec)
----------
- Use SORT for searching on servers with SORT capability
- Added message status filter

2008/11/06 (alec)
----------
- Fix empty file sending (#1485389)
- Improved searching with many criterias (calling one SEARCH command)

2008/11/05 (alec)
----------
- Fix HTML editor initialization on IE (#1485304)

2008/11/03 (alec)
----------
- Add warning when switching editor mode from html to plain (#1485488)
- Make identities list scrollable (#1485538)

2008/10/29 (alec)
----------
- Fix problem with numeric folder names (#1485527)
- Added BYE response simple support to prevent from endless loops in imap.inc (#1483956)

2008/10/27 (alec)
----------
- Fix unread message unintentionally marked as read if read_when_deleted=true (#1485409)
- Remove port number from SERVER_NAME in smtp_helo_host (#1485518)

2008/10/25 (alec)
----------
- Don't send disposition notification receipts for messages marked as 'read' (#1485523)
- Added 'keep_alive' and 'min_keep_alive' options (#1485360)

2008/10/24 (alec)
----------
- Added option 'identities_level', removed 'multiple_identities'
- Allow deleting identities when multiple_identities=false (#1485435)

2008/10/22 (alec)
----------